Weave module jdk.jfr into the module graph at launch time...